--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*Stili  generali della pagina*/
 
 body{
-    background-color: rgb(37, 37, 37);
+    background-color: rgb(255, 255, 255);
+    padding-top:100px;
 }
 
 *{
@@ -15,11 +16,16 @@ body{
 }
 
 /*nav*/
-
 nav{
     background-color: rgb(255, 94, 0);
     display: flex;
     min-height: 75px;
+    margin-bottom: 50px;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    top: 0;
+
 }
 
 #container_nav{
@@ -28,7 +34,7 @@ nav{
     width: 80%;
     justify-content: space-between;
     color: white;
-    z-index: 3;
+    align-items: center;
 }
 
 #logo{
@@ -50,7 +56,91 @@ nav{
 
 /*main*/
 
-/*righe principali*/
+#container_main{ /*disposizione principale a colonne*/
+    margin: auto;
+    width: 80%;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+}
+
+/*righe principali e cards*/
+
+.row1{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.row2{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: relative;
+    justify-content: center;
+}
+
+.card{
+    position: relative;
+    flex-direction: row;
+    margin: 10px;
+}
+
+.item{
+    max-height: 700px;
+    background-color: gray;
+    margin-top: 30px;
+    position: relative;
+}
+
+.price_discounted{
+    color: red;
+}
+
+.original_price{
+    text-decoration: line-through;
+}
+
+.brand{
+    font-size: 15px;
+}
+
+.discount{
+    position: absolute;
+    top: 650px;
+    left: 0;
+    background-color: red;
+    color: white;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.green{
+    position: absolute;
+    top: 650px;
+    left: 55px;
+    background-color: green;
+    color: white;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.only{
+    left: 0;
+}
+
+.fa-heart1{
+    position: absolute;
+    top: 40px;
+    right:0px ;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    font-size: 20px;
+}
 
 /*footer*/
 
