--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav{
     min-height: 75px;
     margin-bottom: 50px;
     position: fixed;
-    z-index: 3;
+    z-index: 11;
     width: 100%;
     top: 0;
 
@@ -94,6 +94,7 @@ nav{
     background-color: gray;
     margin-top: 30px;
     position: relative;
+    cursor: pointer;
 }
 
 .price_discounted{
@@ -116,6 +117,7 @@ nav{
     color: white;
     padding: 5px;
     font-size: 18px;
+    z-index: 10;
 }
 
 .green{
@@ -126,6 +128,7 @@ nav{
     color: white;
     padding: 5px;
     font-size: 18px;
+    z-index: 10;
 }
 
 .only{
@@ -140,6 +143,8 @@ nav{
     color: rgb(0, 0, 0);
     padding: 10px;
     font-size: 20px;
+    cursor: pointer;
+    z-index: 10;
 }
 
 /*footer*/
@@ -172,5 +177,48 @@ footer{
     margin-top: 10px;
     gap: 10px;
     flex-direction: row;
+}
+
+/*sezione hover*/
+
+.fa-heart1:hover{
+    display: block;
+    color: red;
+}
+
+.one:hover{
+    display: block;
+    content: url(img/1b.webp);
+    max-height: 700px;  
+}
+
+.two:hover{
+    display: block;
+    content: url(img/2b.webp);
+    max-height: 700px;  
+}
+
+.three:hover{
+    display: block;
+    content: url(img/3b.webp);
+    max-height: 700px;  
+}
+
+.four:hover{
+    display: block;
+    content: url(img/4b.webp);
+    max-height: 700px;   
+}
+
+.five:hover{
+    display: block;
+    content: url(img/5b.webp);
+    max-height: 700px;  
+}
+
+.six:hover{
+    display: block;
+    content: url(img/6b.webp);
+    max-height: 700px;   
 }
 
