--- a/style.css
+++ b/style.css
@@ -66,20 +66,12 @@ nav{
 
 /*righe principali e cards*/
 
-.row1{
+.rows{
     display: flex;
     flex-direction: row;
     position: relative;
     justify-content: center;
     width: 100%;
-}
-
-.row2{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    position: relative;
-    justify-content: center;
 }
 
 .card{
